--- a/src/app/common/heroes/heroes.component.html
+++ b/src/app/common/heroes/heroes.component.html
@@ -1,3 +1,16 @@
+<div class="row">
+  <div class="col-9 offset-3">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">
+          <i class="fa fa-filter"></i>
+        </span>
+      </div>
+      <input (keyup)="searchEvent($event)" type="text" class="form-control" placeholder="filter">
+    </div>
+  </div>
+</div>
+
 <div class="row mt-5">
     <div class="col-12">
         <table class="table table-striped">
@@ -10,7 +23,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let hero of heroList$ | async">
+                <tr *ngFor="let hero of heroList | filter:phrase:'name'">
                     <td>{{ hero.id }}</td>
                     <td>{{ hero.name }}</td>
                     <td>{{ hero.superPower }}</td>
